# cmake-bgl-example

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  main.cpp
